src/objects/vlocity_ins__ClaimCoverage__c.object
<CustomObject>
    <description>Represents the Claim Coverage - an instance of a Policy Coverage on a Claim which is also a prerequesite for making financial transactions for a specific coverage.</description>
    <fields>
        <fullName>vlocity_ins__AssetCoverageId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Policy Coverage Id</label>
        <referenceTo>vlocity_ins__AssetCoverage__c</referenceTo>
        <relationshipLabel>Claim Coverage</relationshipLabel>
        <relationshipName>ClaimPolicyCoverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetCoverageName__c</fullName>
        <formula>vlocity_ins__AssetCoverageId__r.Name</formula>
        <label>Policy Coverage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetInsuredItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insured Item</label>
        <referenceTo>vlocity_ins__AssetInsuredItem__c</referenceTo>
        <relationshipLabel>Claim Coverage</relationshipLabel>
        <relationshipName>ClaimCoverageInsuredItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetPartyRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insured Party</label>
        <referenceTo>vlocity_ins__AssetPartyRelationship__c</referenceTo>
        <relationshipLabel>Claim Coverage</relationshipLabel>
        <relationshipName>ClaimCoverageAssetPartyRelationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimId__c</fullName>
        <label>Claim Id</label>
        <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
        <relationshipLabel>Claim Coverage</relationshipLabel>
        <relationshipName>ClaimCoverageInsuranceClaim</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimantId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claimant Id</label>
        <referenceTo>vlocity_ins__InsuranceClaimPartyRelationship__c</referenceTo>
        <relationshipLabel>Claimant ID</relationshipLabel>
        <relationshipName>ClaimCoverageClaimant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimantName__c</fullName>
        <formula>vlocity_ins__ClaimantId__r.vlocity_ins__PartyId__r.Name</formula>
        <label>Claimant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CoverageReserveStatus__c</fullName>
        <label>Reserve Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending Authority</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Authority Denied</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__CoverageStatus__c</fullName>
        <label>Coverage Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExpenseReserveAmount__c</fullName>
        <label>Expense Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsuredName__c</fullName>
        <formula>IF (vlocity_ins__AssetInsuredItemId__c != null, vlocity_ins__AssetInsuredItemId__r.Name,
                 IF (vlocity_ins__AssetPartyRelationshipId__c != null, vlocity_ins__AssetPartyRelationshipId__r.Name, null))</formula>
        <label>Insured Item/Party Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InvolvedInjuryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Involved Party Id</label>
        <referenceTo>vlocity_ins__InsuranceClaimInvolvedInjury__c</referenceTo>
        <relationshipLabel>Claim Coverage</relationshipLabel>
        <relationshipName>ClaimCoverageInvolvedParty</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InvolvedItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Involved Property Id</label>
        <referenceTo>vlocity_ins__InsuranceClaimInvolvedProperty__c</referenceTo>
        <relationshipLabel>Claim Coverage</relationshipLabel>
        <relationshipName>ClaimCoverageInvolvedItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InvolvedName__c</fullName>
        <formula>IF (vlocity_ins__InvolvedItemId__c != null, vlocity_ins__InvolvedItemId__r.Name,
                 IF (vlocity_ins__InvolvedInjuryId__c != null, vlocity_ins__InvolvedInjuryId__r.Name, null))</formula>
        <label>Involved Item/Person Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OriginalReserveAmount__c</fullName>
        <label>Original Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PaidAmount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PaidExpenseAmount__c</fullName>
        <label>Paid Expense Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReserveAmount__c</fullName>
        <label>Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReserveProcessingMode__c</fullName>
        <label>Reserve Processing Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CoverageReserve</fullName>
                    <default>true</default>
                    <label>Coverage Reserve Mode</label>
                </value>
                <value>
                    <fullName>ReserveWorksheet</fullName>
                    <label>Reserve Worksheet Mode</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Claim Coverage</label>
    <nameField>
        <label>Claim Coverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>